iodine (0.4.2-3) UNRELEASED; urgency=low

  * Add Swedish debconf translation, thanks to Martin Bagge (closes: #504247).
  * Fix "Init script starts iodined even if it is already running" by
    removing the "--pidfile" option from the start-stop-daemon calls;
    doesn't work for a forking process. Thanks to Michael Goetze for 
    the bug report (closes: #511887).

 -- gregor herrmann <gregoa@debian.org>  Sun, 02 Nov 2008 13:56:18 +0100

iodine (0.4.2-2) unstable; urgency=low

  * debian/postinst: only try to create /dev/net/tun if it doesn't exist and
    if /dev/MAKEDEV is available; thanks to Lucas Nussbaum for the bug report
    and to Lucas, Adeodato Simó, Matthew Johnson, and Alexander Wirt for their
    help (closes: #502823).

 -- gregor herrmann <gregoa@debian.org>  Wed, 22 Oct 2008 23:35:25 +0200

iodine (0.4.2-1) unstable; urgency=low

  * New upstream release:
    - new command line switch "-s" to skip configration of the tun interface
      (closes: #477692)
    - drop patches 01_mandir.patch and 02_make.patch, included upstream
    - refresh patches 03_cflags.patch and 04_base64.patch
  * debian/rules: separate DESTDIR and prefix on make install.
  * Add the packages needed by the example script to Suggests: and don't
    compress the example script any more.

 -- gregor herrmann <gregoa@debian.org>  Fri, 08 Aug 2008 16:33:26 -0300

iodine (0.4.1-4) unstable; urgency=low

  * Add Czech debconf translation, thanks to Daniel Kavan
    (closes: #483299).
  * Add note for translators to debconf template and change back localized
    versions of ".example" to the original as mandated by RFC 2606.
  * Convert de.po from ISO-8859-1 to UTF-8.
  * debian/control: change my email address.
  * Switch patch system from dpatch to quilt.
  * Add example script iodine-jigger (script to set up an iodine tunnel and
    route traffic through it) by Barak A. Pearlmutter (closes: #491294).
    Thanks, Barak! Add copyright/license information about the script to