@@ -1,74 +1,31 @@
 #!/usr/bin/make -f
-# -*- makefile -*-
-# Sample debian/rules that uses debhelper.
-# This file was originally written by Joey Hess and Craig Small.
-# As a special exception, when this file is copied by dh-make into a
-# dh-make output file, you may use that output file without restriction.
-# This special exception was added by Craig Small in version 0.37 of dh-make.
-
-# Uncomment this to turn on verbose mode.
-#export DH_VERBOSE=1
 
 include /usr/share/quilt/quilt.make
 
-CFLAGS = -Wall -g
-
-ifneq (,$(findstring noopt,$(DEB_BUILD_OPTIONS)))
-	CFLAGS += -O0
-else
-	CFLAGS += -O2
-endif
-
-configure: configure-stamp
-configure-stamp: $(QUILT_STAMPFN)
-	dh_testdir
-	touch $@
-
 build: build-stamp
-build-stamp: configure-stamp
-	dh_testdir
-	CFLAGS="$(CFLAGS)" $(MAKE)
-	CFLAGS="$(CFLAGS)" $(MAKE) test
-	touch $@
+build-stamp: $(QUILT_STAMPFN)
+	dh build
+	touch build-stamp
 
 clean: unpatch
-	dh_testdir
-	dh_testroot
-	rm -f build-stamp configure-stamp install-stamp
-	$(MAKE) clean
 	debconf-updatepo
-	dh_clean
+	dh clean
 
-install: install-stamp
-install-stamp: build-stamp
-	dh_testdir
-	dh_testroot
+install: build install-stamp
+install-stamp:
+	dh install --before dh_auto_install
 	$(MAKE) install DESTDIR=$(CURDIR)/debian/iodine prefix=/usr
-	touch $@
-
-
-# Build architecture-independent files here.
-binary-indep: build install
-# We have nothing to do by default.
-
-# Build architecture-dependent files here.
-binary-arch: build install
-	dh_testdir
-	dh_testroot
-	dh_installchangelogs CHANGELOG
-	dh_installdocs README
-	dh_installexamples debian/iodine-jigger
-	dh_installdebconf
-	dh_installinit --name=iodined
-	dh_link usr/share/man/man8/iodine.8 usr/share/man/man8/iodined.8
-	dh_strip
+	dh install --after dh_auto_install --before dh_compress
 	dh_compress -Xiodine-jigger
-	dh_fixperms
-	dh_installdeb
-	dh_shlibdeps
-	dh_gencontrol
-	dh_md5sums
-	dh_builddeb
+	dh install --after dh_compress --before dh_installinit
+	dh_installinit --name=iodined
+	dh install --after dh_installinit
+	touch install-stamp
 
-binary: binary-indep binary-arch
-.PHONY: build clean binary-indep binary-arch binary install configure
+binary-arch: install
+	dh binary-arch
+
+binary-indep: install
+	dh binary-indep
+
+binary: binary-arch binary-indep
